--- a/muensterdiscovery/src/i18n/es.json
+++ b/muensterdiscovery/src/i18n/es.json
@@ -45,8 +45,12 @@
     "profile.achievement2_desc": "Ruta de más de 5 km completada",
     "profile.achievement3_title": "Fan del mercado navideño",
     "profile.achievement3_desc": "Todos los mercados navideños visitados",
-    "profile.invalid_image": "Por favor selecciona un archivo de imagen válido.",
-
+    "profile.invalid_image": "Por favor selecciona un archivo de imagen válido.",    "profile.visited_at": "Visitado el:",
+    "profile.statistics": "Estadísticas",
+    "profile.stats_pois": "Lugares Descubiertos",
+    "profile.stats_routes": "Rutas Completadas",
+    "profile.stats_routes_1": "Ruta Completada",
+    "profile.stats_km": "Distancia de Ruta Recorrida",
     "leaderboard.title": "Clasificación",
     "leaderboard.subtitle": "¿Quién ha explorado Münster mejor?",
     "stats.total_km": "km de la comunidad",
@@ -56,7 +60,11 @@
     "leaderboard.alltime": "Clasificación histórica",
     "leaderboard.user": "Usuario",
     "leaderboard.areas": "Áreas",
+    "leaderboard.areas_one": "área",
     "leaderboard.points": "Puntos",
+    "leaderboard.loading": "Cargando Datos",
+    "leaderboard.no_data": "Aún no hay datos disponibles",
+    "leaderboard.km": "Kilómetros de ruta",
 
     "registration.title": "Crear cuenta",
     "registration.firstname": "Nombre",
@@ -69,6 +77,8 @@
     ,
     "registration.already_have_account": "El correo electrónico ya está en uso. ¿Ya tienes una cuenta?",
     "registration.username_taken": "Nombre de usuario ya en uso.",
+    "registration.password_length_error": "La contraseña debe tener al menos 6 caracteres.",
+    "registration.invalid_email_format": "Por favor, introduce una dirección de correo electrónico válida.",
 
     "login.title": "Iniciar sesión",
     "login.email": "Correo electrónico",
