--- a/muensterdiscovery/src/i18n/tk.json
+++ b/muensterdiscovery/src/i18n/tk.json
@@ -46,6 +46,12 @@
     "profile.achievement3_title": "Noel pazarı hayranı",
     "profile.achievement3_desc": "Tüm Noel pazarlarını ziyaret etti",
     "profile.invalid_image": "Lütfen geçerli bir resim dosyası seçin.",
+    "profile.visited_at": "Ziyaret tarihi:",
+    "profile.statistics": "İstatistikler",
+    "profile.stats_pois": "Keşfedilen Yerler",
+    "profile.stats_routes": "Tamamlanan Rotalar",
+    "profile.stats_routes_1": "Tamamlanan Rota",
+    "profile.stats_km": "Kat Edilen Rota Mesafesi",
 
     "leaderboard.title": "Liderler Tablosu",
     "leaderboard.subtitle": "Münster'i en iyi kim keşfetti?",
@@ -56,7 +62,11 @@
     "leaderboard.alltime": "Tüm zamanlar",
     "leaderboard.user": "Kullanıcı",
     "leaderboard.areas": "Alanlar",
+    "leaderboard.areas_one": "alan",
     "leaderboard.points": "Puanlar",
+    "leaderboard.loading": "Veri Yükleniyor",
+    "leaderboard.no_data": "Henüz veri mevcut değil",
+    "leaderboard.km": "Rota kilometreleri",
 
     "registration.title": "Hesap oluştur",
     "registration.firstname": "İsim",
@@ -66,6 +76,10 @@
     "registration.password": "Parola",
     "registration.register_button": "Kayıt Ol",
     "registration.email_confirmation_message": "Onay e-postası gönderildi. Lütfen gelen kutunuzu kontrol edin.",
+    "registration.already_have_account": "E-posta zaten kullanımda. Zaten bir hesabınız var mı?",
+    "registration.username_taken": "Kullanıcı adı zaten alınmış.",
+    "registration.password_length_error": "Şifre en az 6 karakter uzunluğunda olmalıdır.",
+    "registration.invalid_email_format": "Lütfen geçerli bir e-posta adresi girin.",
 
     "login.title": "Giriş Yap",
     "login.email": "E-posta",
