--- a/muensterdiscovery/src/i18n/nl.json
+++ b/muensterdiscovery/src/i18n/nl.json
@@ -26,6 +26,9 @@
     "imprint.content": "Dit project is een studieproject in het kader van de masteropleiding Geoinformatics and Spatial Data Science. Broncode en documentatie zijn beschikbaar op GitHub:",
     "imprint.github_link_text": "GitHub-repository",
     "imprint.home_button": "Terug naar home",
+    "achievement.unlocked": "Prestatie ontgrendeld!",
+    "achievement.button": "Geweldig!",
+    "playroute.collect_reward": "Bekijk beloning",
 
     "openworld.loading": "Kerstmarkten laden...",
     "openworld.more_info": "Meer informatie",
