--- a/muensterdiscovery/src/i18n/pl.json
+++ b/muensterdiscovery/src/i18n/pl.json
@@ -26,6 +26,9 @@
     "imprint.content": "Ten projekt to projekt studencki w ramach studiów magisterskich z Geoinformatics and Spatial Data Science. Kod źródłowy i dokumentacja są dostępne na GitHub:",
     "imprint.github_link_text": "Repozytorium GitHub",
     "imprint.home_button": "Powrót do strony głównej",
+    "achievement.unlocked": "Osiągnięcie odblokowane!",
+    "achievement.button": "Świetnie!",
+    "playroute.collect_reward": "Zobacz nagrodę",
 
     "openworld.loading": "Ładowanie jarmarków bożonarodzeniowych...",
     "openworld.more_info": "Więcej informacji",
