--- a/muensterdiscovery/src/i18n/pt.json
+++ b/muensterdiscovery/src/i18n/pt.json
@@ -26,6 +26,9 @@
     "imprint.content": "Este projeto é um projeto de estudo como parte do mestrado em Geoinformática e Ciência de Dados Espaciais. Código-fonte e documentação estão disponíveis no GitHub:",
     "imprint.github_link_text": "Repositório GitHub",
     "imprint.home_button": "Voltar para a página inicial",
+    "achievement.unlocked": "Conquista desbloqueada!",
+    "achievement.button": "Ótimo!",
+    "playroute.collect_reward": "Ver recompensa",
 
     "openworld.loading": "Carregando mercados de Natal...",
     "openworld.more_info": "Mais informações",
