--- a/muensterdiscovery/src/i18n/en.json
+++ b/muensterdiscovery/src/i18n/en.json
@@ -27,6 +27,9 @@
     "imprint.content": "This project is a student project as part of the Master's program in Geoinformatics and Spatial Data Science. Source code and documentation are available on GitHub:",
     "imprint.github_link_text": "GitHub Repository",
     "imprint.home_button": "Back to Home",
+    "achievement.unlocked": "Achievement unlocked!",
+    "achievement.button": "Great!",
+    "playroute.collect_reward": "View reward",
 
     "openworld.loading": "Loading Christmas Markets...",
     "openworld.more_info": "More Information",
