--- a/muensterdiscovery/src/i18n/fr.json
+++ b/muensterdiscovery/src/i18n/fr.json
@@ -26,6 +26,9 @@
     "imprint.content": "Ce projet est un projet d'études dans le cadre du master en Géoinformatique et Science des Données Spatiales. Le code source et la documentation sont disponibles sur GitHub :",
     "imprint.github_link_text": "Dépôt GitHub",
     "imprint.home_button": "Retour à l'accueil",
+    "achievement.unlocked": "Succès débloqué !",
+    "achievement.button": "Génial !",
+    "playroute.collect_reward": "Voir la récompense",
 
     "openworld.loading": "Chargement des marchés de Noël...",
     "openworld.more_info": "Plus d'informations",
